syntax = "proto3";

package fiber;
option go_package = "./app/grpcHandler";


// The user service definition.
service User {
  rpc SignUp (RequestSignUp) returns (ResponseSignUp) {}
}

// The request message
message RequestSignUp {
  string email = 1;
  string password = 2;
  string userRole = 3;
}

// The response message
message ResponseSignUp {
  int32 id = 1;
  string email = 2;
  int32 status = 3;
  string userRole = 4;
  int32 oldId = 5;
  string mobilePhoneNumber= 6;
}